monitoring/controllers/base/loki-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    name: loki
    toolkit.fluxcd.io/tenant: monitoring
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
